<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">畅捷sdk-Demo</string>
    <string name="action_settings">Settings</string>

    <string name="ali_wx_pay_param">微信/支付宝支付参数</string>
    <string name="card_prefix">卡号前六位</string>
    <string name="card_suffix">卡号后四位</string>
    <string name="card_type">卡类型</string>
    <string name="credit_card_label">贷记卡</string>
    <string name="debit_card_label">借记卡</string>
    <string name="authentication_label">鉴权绑卡</string>
    <string name="request_pay">请求支付</string>
    <string name="authentication_query">鉴权查询</string>

    <string name="credit_card_cvv2">cvv2码</string>
    <string name="credit_card_term">有效期</string>
    <string name="bank_card_number">卡号</string>
    <string name="order_number">订单号</string>
    <string name="read_number">流水号</string>
    <string name="order_expired_time">订单有效期</string>
    <string name="send_message_flag">短信发送标识</string>
    <string name="notify_url">异步通知地址</string>
    <string name="extension">扩展字段</string>

    <string name="buyer_pay_code">付方支付ID</string>
    <string name="trade_memo">商品描述</string>

    <string name="credentials_type">证件类型</string>
    <string name="certificate_of_identification">身份证</string>
    <string name="id_card_number">证件号</string>
    <string name="card_holder_name">持卡人姓名</string>
    <string name="card_holder_phone">手机号</string>
    <string name="auth_order">鉴权订单</string>
    <string name="pay_order">支付订单</string>

    <string name="goods_name">商品名称</string>
    <string name="goods_detail">商品详情</string>
    <string name="mer_user_id">用户标识</string>
    <string name="seller_id">商户编号</string>
    <string name="sub_merchant_no">子商户号</string>
    <string name="trade_type">交易类型</string>

    <string name="limit_credit_pay">限制信用卡</string>
    <string name="no_credit">是</string>
    <string name="use_credit">否</string>

    <string name="type_right">即时</string>
    <string name="type_ensure">担保</string>
    <string name="ensure_amount">担保金额</string>
    <string name="split_list">分账列表</string>
    <string name="trx_amt">交易金额</string>
    <string name="trade_status">交易状态</string>
    <string name="royalty_parameters">分润账号集</string>

    <string name="return_url">同步回跳地址</string>

</resources>
